# konsool-meshtastic-ui

./: .gitmodules  Makefile  README.md  partitions.csv
components/SdFat/: CMakeLists.txt
main/: BadgeBspBatteryLevel.cpp  BadgeBspBatteryLevel.h  BadgeBspDisplay.cpp  BadgeBspDisplay.h  CMakeLists.txt  EspClient.cpp  EspClient.h  EspLogger.h  Meshtastic.cpp  Meshtastic.h  idf_component.yml  main.cpp
sdkconfigs/: general  tanmatsu
